[project]
name = "langchain-chabot"
version = "0.1.0"
description = ""
authors = [
    {name = "dheerendra143",email = "singhdheerendra83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
]

[tool.poetry.scripts]
dev = "langchain_ollama.server:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
